fix: Change Upload YAML Dialog layout on small screens (#4242)

--- a/src/components/Clusters/components/AddClusterWizard.scss
+++ b/src/components/Clusters/components/AddClusterWizard.scss
@@ -96,3 +96,9 @@ ui5-wizard {
     }
   }
 }
+
+@media screen and (max-width: 380px) {
+  ui5-wizard {
+    width: 100%;
+  }
+}
