--- a/src/resources/Namespaces/YamlUpload/YamlUploadDialog.scss
+++ b/src/resources/Namespaces/YamlUpload/YamlUploadDialog.scss
@@ -4,6 +4,9 @@
   }
 
   &__layout {
+    overflow-y: 'hidden';
+    height: '80vh';
+    width: '80vw';
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
@@ -11,5 +14,15 @@
   &__content {
     background-color: var(--sapGroup_ContentBackground);
     border-radius: var(--sapElement_BorderCornerRadius);
+  }
+
+  @media screen and (max-width: 550px) {
+    &__layout {
+      height: auto;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
   }
 }
